syntax = "proto3";

package comment;

import "google/protobuf/timestamp.proto";

service CommentService {
    // 新评论
    rpc CreateComment(CreateCommentRequest) returns (CreateCommentReply);
    // 获取文章评论
    rpc GetPostComments(GetPostCommentsRequest) returns (GetPostCommentsReply);
    // (后台) 删除/恢复评论
    rpc ToggleComment(ToggleCommentRequest) returns (ToggleCommentReply);
}

message Comment {
    int32 id = 1;
    int32 post_id = 2; // 对应的文章 id 
    string name = 3; // 昵称
    string hashed_email = 4; // 哈希过的 email，用于获取 Gravatar 头像
    string content = 5; // 支持 markdown 且应不超过 200 字符
    google.protobuf.Timestamp created_at = 6; // 评论时间
    bool is_del = 7;
}

message CreateCommentRequest {
    int32 post_id = 1;
    string name = 2;
    string hashed_email = 3;
    string content = 4;
}

message CreateCommentReply {
    int32 id = 1;
}

message GetPostCommentsRequest {
    int32 post_id = 1;
}

message GetPostCommentsReply {
    repeated Comment comments = 1;
}

message ToggleCommentRequest {
    int32 id = 1;
}

message ToggleCommentReply {
    int32 id = 1;
    bool is_del = 2;
}